fix update session storage after change a project from one company to another and fix layout bugs

--- a/Modules/Attendance/Resources/assets/css/index.css
+++ b/Modules/Attendance/Resources/assets/css/index.css
@@ -957,7 +957,7 @@ button:active {
     opacity: .5;
 }
 
-.sirius-select-container {
+.page .sirius-select-container {
     width: 285px;
 }
 
